2002-02-17  Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>

	* Source/NSApplication.m ([NSApplication -terminate:]): send a
	close message to all the windows.

Thu Feb 14 10:45:48 2002  Nicola Pero  <n.pero@mi.flashnet.it>
                          Michael Hanni <mhanni@yahoo.com>

	* Source/NSMenuItemCell.m ([-drawStateImageWithFrame:inView:]):
	Exit as soon as possible if we have no state image to draw.
	([-imageRectForBounds:]), ([-titleRectForBounds:]): Do not pad for
	the state image if the state image has no width.
	* Source/NSPopUpButtonCell.m ([-insertItemWithTitle:atIndex:]):
	Set the On and Mixed image of the new menu item to nil.
	([-selectItem:]): Do not call setChangesState: NO on the selected
	menu item.
	
2002-02-13  Richard Frith-Macdonald  <rfm@gnu.org>

	* Source/GSTextStoarge.m: Add GSIMap option for minor performance
	improvement.
	* Tools/make_services.m: Use correct user root.  Noticed that this
	tool needs fixing to use the correct paths as provided by the
	NSSearchPathsForDirectoriesInDomains() function.
	* Source/NSSpellServer.m: Use NSSearchPathsForDirectoriesInDomains()

2002-02-13  Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>

	* Source/NSTableHeaderCell.m: New drawing code, support for
	highlighted cells.
	* Source/NSTableHeaderView.m: support for drawing highlighted
	column, support for NSTableView mouseDownInHeaderOfTableColumn:
	and didClickTableColumn: delegate messages.
	* Source/NSTableView.m: rewrite of -mouseDown method.
	rewrite of selection handling to fully support the specs
	new tableView:didClickTableColumn: and 
	tableView:mouseDownInHeaderOfTableColumn delegate messages
	[NSTableView -setHighlightedTableColumn:]
	[NSTableView -highlightedTableColumn]: methods implemented.
	* Headers/gnustep/gui/NSTableView.h: 
	new _highlightedTableColumn ivar.
	
2002-02-12  Richard Frith-Macdonald  <rfm@gnu.org>

	* Source/NSBundleAdditions.m: Fix dumb error in my last modification.
	(bug report by Stephen brandon).
