@@ -1,3 +1,8 @@
+2002-02-18  Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>
+
+	* Source/NSWindow.m ([NSWindow -close]): ignore the call if the
+	window is already closed.
+
 2002-02-17  Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>
 
 	* Source/NSApplication.m ([NSApplication -terminate:]): send a
